--- a/SyncSharp/MainWindow.xaml
+++ b/SyncSharp/MainWindow.xaml
@@ -7,6 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Button Content="Send new Config" HorizontalAlignment="Left" Margin="353,184,0,0" VerticalAlignment="Top" Click="ButtonClickSendConfig"/>
+            
 
     </Grid>
 </Window>
