--- a/SyncSharp/MainWindow.xaml
+++ b/SyncSharp/MainWindow.xaml
@@ -18,7 +18,7 @@
         </ListView>
         <TextBox x:Name="BackupIntervalInput" Margin="0,386,567,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Height="20" HorizontalAlignment="Right" Width="120"/>
         <Button x:Name="SendConfigBtn" Content="Send Config" Margin="0,386,488,0" HorizontalAlignment="Right" Width="74" Height="20" VerticalAlignment="Top" Click="ButtonClickSendConfig"/>
-        <Button x:Name="AddNewFilesBtn" Content="Add Paths" HorizontalAlignment="Left" Margin="50,386,0,0" VerticalAlignment="Top" Click="disconnect"/>
+        <Button x:Name="AddNewFilesBtn" Content="Add Paths" HorizontalAlignment="Left" Margin="50,386,0,0" VerticalAlignment="Top" Click="Disconnect"/>
 
     </Grid>
 
