--- a/SyncSharp/MainWindow.xaml
+++ b/SyncSharp/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SyncSharp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" ResizeMode="CanMinimize">
+        Title="SyncSharp" Height="450" Width="800" ResizeMode="CanMinimize">
 
     <Grid x:Name="MainGrid" Width="{Binding ActualWidth, ElementName=window, Mode=OneWay}" Height="{Binding ActualHeight, ElementName=window, Mode=OneWay}" >
         
